<resources>
    <string name="app_name">Drive Buddy</string>
    <string name="prefs_file">com.example.reconocimientoapp.PREFERENCE_FILE_KEY</string>
    <string name="facebook_app_id">1586766231508725</string>
    <string name="fb_login_protocol_scheme">fb1586766231508725</string>
    <string name="title_activity_welcome__screen">Welcome_Screen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="bienvenido">Welcome!</string>
    <string name="estas_listo">Are you ready to drive safety?</string>
    <string name="registrate">Sign In</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">email</string>
    <string name="viajes">Check your <font fgcolor='#EBEE4D'>last trips</font></string>
    <string name="hintEmailLogin">Email or User name</string>
    <string name="hintPassword">Password</string>
    <string name="logIn">Log In</string>
    <string name="noAccount">Doesn\'t have an account?</string>
    <string name="createAccount">Create account</string>
    <string name="saveYourStats">Save and view your stats!</string>
    <string name="fullName">Full name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="haveAnAccount">Do you have an account?</string>
    <string name="logInAsAGuest">Log In as a guest</string>
    <string name="dateStat">Summary</string>
    <string name="detectedFatigue">Detected fatigue</string>
    <string name="totalTripsTime">Total time on trips</string>
    <string name="longBlinks">Long blinks</string>
    <string name="yawns">Yawns</string>
    <string name="avgSpeed">Average speed</string>
    <string name="kmTraveled">Kilometers traveled</string>
    <string name="tipsBeforeYouStart">Check out this tips for your trip!</string>
    <string name="tipsCons">Click on any tip to listen!</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="tripFinished">Well done!</string>
    <string name="trippingTime">Tripping time</string>
    <string name="settings">Settings</string>
    <string name="vibratingAlert">Vibrating Alerts</string>
    <string name="notificationSound">Notification Sounds</string>
    <string name="textToSpeechAlerts">Text to speech alerts</string>
    <string name="flashingAlerts">Flashing alerts</string>
    <string name="save">Save</string>
    <string name="authentication">Authentication</string>
    <string name="authenticationError">Authentication failed. </string>
    <string name="ok">OK</string>
</resources>