<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="#494949">


    <TextView
        android:id="@+id/textView"
        android:layout_width="240dp"
        android:layout_height="33dp"
        android:fontFamily="@font/montserrat_bold"
        android:padding="0dp"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20dp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline35"
        app:layout_constraintEnd_toStartOf="@+id/guideline34"
        app:layout_constraintStart_toStartOf="@+id/guideline33"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/vibratingAlert"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="12dp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline32"
        app:layout_constraintEnd_toStartOf="@+id/guideline39"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toTopOf="@+id/guideline31"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/notificationSound"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="12dp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline40"
        app:layout_constraintEnd_toStartOf="@+id/guideline39"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toTopOf="@+id/guideline36"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/flashingAlerts"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="12dp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline44"
        app:layout_constraintEnd_toStartOf="@+id/guideline39"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toTopOf="@+id/guideline43"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/textToSpeechAlerts"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="12dp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline42"
        app:layout_constraintEnd_toStartOf="@+id/guideline39"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toTopOf="@+id/guideline41"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/guardarData"
        android:layout_width="147dp"
        android:layout_height="37dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_corner_conf"
        android:elevation="4dp"
        android:textSize="24sp"
        android:translationZ="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline34"
        app:layout_constraintStart_toStartOf="@+id/guideline33"
        app:layout_constraintTop_toTopOf="@+id/guideline37"
        app:layout_constraintVertical_bias="0.19999999" />

    <TextView
        android:id="@+id/iniciar_ses"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="#EBEE4D"
        android:textSize="16dp"
        android:translationZ="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/guardarData"
        app:layout_constraintEnd_toEndOf="@+id/guardarData"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/guardarData"
        app:layout_constraintTop_toTopOf="@+id/guardarData"
        app:layout_constraintVertical_bias="0.53" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05109489" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.69" />

    <Switch
        android:id="@+id/switchVibracion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline32"
        app:layout_constraintEnd_toStartOf="@+id/guideline34"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/guideline31"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/switchNotificacion"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline40"
        app:layout_constraintEnd_toStartOf="@+id/guideline34"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/guideline36" />

    <Switch
        android:id="@+id/switchTextToSpeech"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline42"
        app:layout_constraintEnd_toStartOf="@+id/guideline34"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/guideline41"
        app:layout_constraintVertical_bias="0.623" />

    <Switch
        android:id="@+id/switchVibracionFlash"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:translationZ="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline44"
        app:layout_constraintEnd_toStartOf="@+id/guideline34"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline39"
        app:layout_constraintTop_toTopOf="@+id/guideline43"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.41" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.49" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.88" />

</androidx.constraintlayout.widget.ConstraintLayout>